gccida/g3/gen_reg_rtx
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_reg_rtx/src/emit-rtl.c:1115:19: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  gen_reg_rtx( machine_mode mode) 
                  ^
                  enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_reg_rtx/src/emit-rtl.c:1126:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v10; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_reg_rtx/src/emit-rtl.c:1142:51: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( generating_concat_p && ( v9 = *( ( _DWORD *)&mode_class_0 + ( int)mode), ( unsigned int)( v9 - 5) <= 1) ) 
                                                  ^~~~~~~~~~~~
                                                  mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_reg_rtx/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_reg_rtx/src/emit-rtl.c:1144:61: error: called object type 'const enum mode_class [59]' is not a function or function pointer
v10 = mode_for_size( 8 * mode_unit_size[mode], ( mode_class)( ( v9 == 6) + 1), 0); 
                                               ~~~~~~~~~~~~~^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_reg_rtx/src/obj/emit-rtl.o] Error 1
